--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,6 +24,7 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+    compile 'com.vivian.widgets:TimeLineItemDecoration:1.3'
     compile 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
     compile 'com.github.LuckSiege.PictureSelector:picture_library:v2.1.7'
@@ -39,4 +40,5 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile files('libs/AMap3DMap_5.3.0_AMapSearch_5.3.1_20170817.jar')
     compile files('libs/AMap_Location_V3.5.0_20170731.jar')
+    compile files('libs/AMap3DMap_6.2.0_AMapSearch_6.1.0_20180427.jar')
 }
